==> pszlzheng/Pslzheng_Go_Repository/project_lora/LORA/lora_app.c <==
#include "lora_app.h"
#include "lora_ui.h"
#include "lora_cfg.h"
#include "usart3.h"
#include "string.h"
#include "led.h"
#include "delay.h"
#include "lcd.h"
#include "stdio.h"
#include "text.h"
#include "key.h"
#include "usart.h"
#include "ds18b20.h"
#include "pcf8574.h"
#include "adc.h"

void Aux_Int(u8 mode)
{
	if(!mode)
	{
		HAL_NVIC_DisableIRQ(EXTI15_10_IRQn);//失能中断线11
	}
	else
	{
		if(mode==1)
		{
			 GPIO_Initure.Pin=GPIO_PIN_11; //PI11
       GPIO_Initure.Mode=GPIO_MODE_IT_RISING;//上升沿触发
		}
			
	  else if(mode==2)
		{
			 GPIO_Initure.Pin=GPIO_PIN_11; //PI11
       GPIO_Initure.Mode=GPIO_MODE_IT_FALLING;//下降沿触发
		}
		
		 HAL_GPIO_Init(GPIOI,&GPIO_Initure);//重新初始化
	   __HAL_GPIO_EXTI_CLEAR_IT(GPIO_PIN_11);//清除中断标志位
		 HAL_NVIC_SetPriority(EXTI15_10_IRQn,2,0); //抢占优先级为2，子优先级为0
		 HAL_NVIC_EnableIRQ(EXTI15_10_IRQn);//使能
	}
	Int_mode = mode;//记录中断模式
}

u8 LoRa_Init(void)
{
	u8 retry=0;
	u8 temp=1;

	__HAL_RCC_GPIOA_CLK_ENABLE();          //开启GPIOA时钟
	__HAL_RCC_GPIOI_CLK_ENABLE();          //开启GPIOI时钟
	 
	GPIO_Initure.Pin=GPIO_PIN_4;           //PA4
	GPIO_Initure.Mode=GPIO_MODE_OUTPUT_PP; //推挽输出
	GPIO_Initure.Pull=GPIO_PULLDOWN;       //下拉
	GPIO_Initure.Speed=GPIO_SPEED_HIGH;    //高速
	HAL_GPIO_Init(GPIOA,&GPIO_Initure);

	GPIO_Initure.Pin=GPIO_PIN_11;          //PI11
	GPIO_Initure.Mode=GPIO_MODE_IT_RISING; //上升沿触发
	GPIO_Initure.Pull=GPIO_PULLDOWN;       //下拉
	GPIO_Initure.Speed=GPIO_SPEED_HIGH;    //高速
	HAL_GPIO_Init(GPIOI,&GPIO_Initure);
	
	LORA_MD0=0;				//MD0,AUX都为0时，lora进入一般模式，进行透传
	LORA_AUX=0;
	
	while(LORA_AUX)//确保LORA模块在空闲状态下(LORA_AUX=0)
	{
		 Show_Str(40+30,50+20,200,16,"BUSYING NOW!!!",16,0); 	
		 delay_ms(500);
		 Show_Str(40+30,50+20,200,16,"______________",16,0);
     delay_ms(100);		 
	}
	usart3_init(115200);//初始化串口3
	LORA_MD0=1;//进入AT（配置）模式
	delay_ms(40);
	retry=3;
	while(retry--)
	{
	 if(!lora_send_cmd("AT","OK",70))
	 {
		 temp=0;//检测成功
		 break;
	 }	
	}
	if(retry==0) temp=1;//检测失败
	return temp;
}

void LoRa_SendData(int counter)//Lora模块发送数据
{      
	float temperature=20;
	float ph=7.5;
	float oxy=5.2;
  u16 addr;
	u16 adcx;
	u16 adcy;
	u8 chn;
	u16 i=0;
	PCF8574_ReadBit(BEEP_IO);
	if(LoRa_CFG.mode_sta == LORA_STA_Tran)//透明传输
	{
		temperature=DS18B20_Get_Temp();
		adcx=Get_Adc_Average(ADC_CHANNEL_5,10);//获取通道5的20次取平均溶氧量转换值
		adcy=Get_Adc_Average(ADC_CHANNEL_6,10);//获取通道6的20次取平均酸碱度转换值
		oxy=adcx*0.012;
		ph=adcy*0.0050;
		sprintf((char*)Tran_Data,"%s-%.2f-%.2f-%.2f-%s-%d","STM_TWO",ph,temperature/10,oxy,"1",counter);
		u3_printf("%s",Tran_Data);
		LCD_Fill(0,195,240,220,WHITE);//清除显示
		Show_Str_Mid(10,195,Tran_Data,16,240);
	}
	else if(LoRa_CFG.mode_sta == LORA_STA_Dire)//定向传输
	{
		addr = (u16)obj_addr;//目标地址
		chn = obj_chn;//目标信道
		date[i++] =(addr>>8)&0xff;//高位地址
		date[i++] = addr&0xff;//低位地址
		date[i] = chn;  //无线信道
		for(i=0;i<Dire_DateLen;i++)//数据写到发送BUFF
		{
			date[3+i] = Dire_Date[i];
		}
		for(i=0;i<(Dire_DateLen+3);i++)
		{
			while(__HAL_UART_GET_FLAG(&UART3_Handler,UART_FLAG_TXE)== RESET);//循环发送,直到发送完毕   
			HAL_UART_Transmit(&UART3_Handler,&date[i],1,1000);	
		}	
    //将十六进制的数据转化为字符串打印在lcd_buff数组
		sprintf((char*)wlcd_buff,"%x %x %x %x %x %x %x %x",
		date[0],date[1],date[2],date[3],date[4],date[5],date[6],date[7]);	
		LCD_Fill(0,200,240,230,WHITE);//清除显示
		Show_Str_Mid(10,200,wlcd_buff,16,240);//显示发送的数据		
	  Dire_Date[4]++;//Dire_Date[4]数据更新	
	}
}

void LoRa_ReceData(void)//Lora模块接收数据
{
	u16 i=0;
	u16 len=0;
	//有数据来了
	if(USART3_RX_STA&0x8000)
	{
		len = USART3_RX_STA&0X7FFF;
		USART3_RX_BUF[len]=0;//添加结束符
		USART3_RX_STA=0;

		for(i=0;i<len;i++)
		{
			while(__HAL_UART_GET_FLAG(&UART1_Handler,UART_FLAG_TXE)== RESET);//循环发送,直到发送完毕   
			HAL_UART_Transmit(&UART1_Handler,&USART3_RX_BUF[i],1,1000);	
		}
		LCD_Fill(10,260,240,320,WHITE);
		if(LoRa_CFG.mode_sta==LORA_STA_Tran)//透明传输
		{
			if (USART3_RX_BUF[6]=='1')
			{
				Show_Str_Mid(10,270,USART3_RX_BUF,16,240);//显示接收到的数据
				Lora_analyze(USART3_RX_BUF);
			}
		}
		else if(LoRa_CFG.mode_sta==LORA_STA_Dire)//定向传输
		{
			//将十六进制的数据转化为字符串打印在lcd_buff数组
			sprintf((char*)rlcd_buff,"%x %x %x %x %x",USART3_RX_BUF[0],USART3_RX_BUF[1],USART3_RX_BUF[2],USART3_RX_BUF[3],USART3_RX_BUF[4]);
			Show_Str_Mid(10,270,rlcd_buff,16,240);//显示接收到的数据
			delay_ms(1000);
			Lora_analyze(rlcd_buff);
		}
		memset((char*)USART3_RX_BUF,0x00,len);//串口接收缓冲区清0
	}
}

void Lora_Test(void)
{
	u8 t=0;
	u8 key=0;
	u8 netpro=0;
	LCD_Clear(WHITE);
	POINT_COLOR=RED;
	Show_Str_Mid(0,30,"SMART FISH POOL SYSTEM",16,240); 
	while(LoRa_Init())//初始化ATK-LORA-01模块
	{
		Show_Str(40+30,50+20,200,16,"NO DEVICE DETECTED!!!",16,0); 	
		delay_ms(300);
		Show_Str(40+30,50+20,200,16,"BLANK",16,0);
	}
	Show_Str(40+30,50+20,200,16,"DEVICE DETECTED!!!",16,0);
  delay_ms(500); 	
	Menu_ui();//菜单
	while(1)
	{
		key = KEY_Scan(0);
		if(key)
		{
			Show_Str(30+10,95+45+netpro*25,200,16,"  ",16,0);//清空之前的显示
			if(key==KEY0_PRES)//KEY0按下
			{
				if(netpro<6)netpro++;
				else netpro=0;
			}
			else if(key==KEY1_PRES)//KEY1按下
			{
				if(netpro>0)netpro--;
				else netpro=6; 
			}
			else if(key==WKUP_PRES)//KEY_UP按下
			{
				if(netpro==0)//进入通信选项
				{
				  LoRa_Process();//开始数据测试
				  netpro=0;//索引返回第0
				  Menu_ui();
				}
				else
				{
					Show_Str(30+40,95+45+netpro*25+2,200,16,"________",16,1);//显示下划线,表示选中
					Show_Str(30+10,95+45+netpro*25,200,16,"-->",16,0);//指向新条目
					Menu_cfg(netpro);//参数配置
					LCD_Fill(30+40,95+45+netpro*25+2+15,30+40+100,95+45+netpro*25+2+18,WHITE);//清除下划线显示
				}
			}
			Show_Str(30+10,95+45+netpro*25,200,16,"-->",16,0);//指向新条目
		}
		t++;
		if(t==30)
		{
			t=0;
			LED1=~LED1;
		}
		delay_ms(10);
	}	
}
